# gspeech-drone

./: .gitignore  voice_droneControl.cpp
Drone_control/: CMakeLists.txt  voice_droneControl.cpp
Ground_contol/: messagemake.py
Ground_control/: voice_droneControl.py
example/test/: DroneControl.cpp
